--- a/exercises/ex_2/Makefile
+++ b/exercises/ex_2/Makefile
@@ -14,6 +14,9 @@ LINKERSCRIPT=lib/efm32gg.ld
 SOURCES = $(shell find -name "*.c")
 OBJECTS = $(SOURCES:.c=.o)
 
+ex2.hex : ex2.elf
+	${OBJCOPY} -O ihex $< $@
+
 ex2.bin : ex2.elf
 	${OBJCOPY} -O binary $< $@
 
