hopefully everything is housekept as fuck

--- a/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/driver-gamepad-1.0/Makefile
+++ b/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/driver-gamepad-1.0/Makefile
@@ -9,9 +9,7 @@ clean:
 else
 
 obj-m	:= driver-gamepad.o
-# removed this decleration because I dont know the purpose and it
-# crashes compilation.
-#CFLAGS_MODULE := -mlong-calls
+CFLAGS_MODULE := -mlong-calls
 
 modules modules_install clean:
 	$(MAKE) -C $(PTX_KERNEL_DIR) M=$(CURDIR) V=$(V) $@
