added api for display

--- a/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
+++ b/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
@@ -6,15 +6,22 @@
 # add more flags here,
 # but don't remove the "+="
 #
-CFLAGS += -O2 -g -Wall #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
+CC = arm-cortexm3-uclinuxeabi-gcc
+CFLAGS += -O2 -g -Wall -std=c99  #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
 CPPFLAGS +=
-LDFLAGS +=
+LDFLAGS += -lm
+
+
+OBJ = display.o
 
 
 all: game
 
+game: ${OBJ} 
+	${CC} ${CFLAGS} game.c ${OBJ} -o game ${LDFLAGS}
+
 clean:
-	-rm -f game
+	-rm -f game *.o
 
 install:
 
