functional game, game of zwag

--- a/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
+++ b/exercises/ex_3/OSELAS.BSP-EnergyMicro-Gecko/local_src/game-1.0/Makefile
@@ -7,12 +7,12 @@
 # but don't remove the "+="
 #
 #CC = arm-cortexm3-uclinuxeabi-gcc
-CFLAGS += -O2 -g -Wall -std=c99 #-D_POSIX_C_SOURCE=199309L #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
+CFLAGS += -O3 -g -Wall -std=c99 #-D_POSIX_C_SOURCE=199309L #-Wsign-compare -Wfloat-equal -Wformat-security #-Werror
 CPPFLAGS +=
 LDFLAGS += -lm
 
 
-OBJ = display.o
+OBJ = display.o graphics.o
 
 
 all: game
